# robotnik_dpro_controller

./: README.md
dpro_controller/: CMakeLists.txt  package.xml
dpro_controller/config/: servos.yaml
dpro_controller/include/dpro_controller/: dpro_hw_interface.h  dynamixel_helper.h
dpro_controller/launch/: dpro_controller.launch
dpro_controller/src/: dpro_controller_main.cpp  dpro_hw_interface.cpp  dynamixel_helper.cpp
dxl_sdk_2_linux/: README.md
dxl_sdk_2_linux/example/GoalPos/: main.cpp
dxl_sdk_2_linux/example/OperatingMode/: main.cpp
dxl_sdk_2_linux/example/ReadValues/: main.cpp
dxl_sdk_2_linux/example/ReadWrite/: main.cpp
dxl_sdk_2_linux/example/SyncWrite/: main.cpp  main_position.cpp
dxl_sdk_2_linux/example/monitor/: monitor
dxl_sdk_2_linux/include/: dynamixel.h
robotnik_dpro_controller/: CMakeLists.txt  README.md  package.xml
robotnik_dpro_controller/config/: config_example.yaml  servo_gripper.yaml  servo_lift_torso_m.yaml  servo_lift_torso_rad.yaml  servos_arm.yaml  servos_l42_test.yaml  servos_pan_tilt.yaml  servos_torso_pan_tilt.yaml
robotnik_dpro_controller/launch/: robotnik_dpro_controller.launch  robotnik_dpro_controller_arm.launch  robotnik_dpro_controller_torso_pan_tilt.launch
robotnik_dpro_controller/src/: robotnik_dpro_controller.cpp
