<?xml version="1.0"?>
<package>
  <name>robotnik_dpro_controller</name>
  <version>0.0.0</version>
  <description>The robotnik_dpro_controller package</description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>self_test</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>self_test</run_depend>
  
  <export>
  </export>
</package>
